[gd_scene load_steps=23 format=3 uid="uid://cmub23ehbly5y"]

[ext_resource type="Texture2D" uid="uid://ucddr3so5aov" path="res://Assets/Other/BackgroundPokéball.svg" id="1_b226h"]
[ext_resource type="Script" uid="uid://cswtynemtxk4p" path="res://Scripts/intro.gd" id="1_duh1u"]
[ext_resource type="LabelSettings" uid="uid://brmxcb8bin3gv" path="res://Settings/title.tres" id="3_alxvg"]
[ext_resource type="Texture2D" uid="uid://cxa0jnv3wr553" path="res://Assets/Other/up-pokéball.svg" id="4_pgam6"]
[ext_resource type="Texture2D" uid="uid://cwahfmxj2ubwb" path="res://Assets/Other/empty-button.svg" id="4_rsiac"]
[ext_resource type="Texture2D" uid="uid://cdi20j82maaar" path="res://Assets/Other/dark-empty-button.svg" id="5_3bmuq"]
[ext_resource type="Texture2D" uid="uid://b8hk0pmut5h0s" path="res://Assets/Other/check-on.svg" id="5_b26wi"]
[ext_resource type="Texture2D" uid="uid://e6obau1q7ug6" path="res://Assets/Other/down-pokéball.svg" id="5_itfcf"]
[ext_resource type="FontFile" uid="uid://c1d0u38rdmmt4" path="res://Assets/Fonts/Pokemon Solid.ttf" id="6_3bmuq"]
[ext_resource type="Texture2D" uid="uid://dvc7haepkt2ea" path="res://Assets/Other/check-off.svg" id="6_ewknp"]
[ext_resource type="Texture2D" uid="uid://c3v7ul35urc3k" path="res://Assets/Other/grey-empty-button3.svg" id="6_nn7w8"]
[ext_resource type="AudioStream" uid="uid://biwtilur85tk3" path="res://Assets/Sounds/Who's That Pokémon.mp3" id="12_itfcf"]
[ext_resource type="PackedScene" uid="uid://cnsp65druikhs" path="res://Scenes/change_scene_animation.tscn" id="13_itfcf"]
[ext_resource type="Texture2D" uid="uid://4yr77ofkgkh1" path="res://Assets/Other/down-poképanel.svg" id="14_33jql"]
[ext_resource type="Texture2D" uid="uid://bgr2o8khna7lq" path="res://Assets/Other/up-poképanel.svg" id="15_iab25"]
[ext_resource type="Texture2D" uid="uid://dkx4ignvmuhr8" path="res://Assets/Other/ScoreSeal.svg" id="16_iab25"]

[sub_resource type="Animation" id="Animation_ewknp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 600)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits/BackSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Credits/BackgroundSprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(180, -381)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Credits/ExitTextureButton:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(119, -127)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Credits/ScrollContainer/CreditsLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Credits/ScrollContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_et3xt"]
resource_name = "SHOWN"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 600)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits/BackSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.282)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Credits/BackgroundSprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(180, 343)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Credits/ExitTextureButton:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(119, 595)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Credits/ScrollContainer/CreditsLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Credits/ScrollContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b26wi"]
resource_name = "coming_soon"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(2.92817, 2.92817, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(0.659754, 2.92817, 1),
"update": 0,
"values": [Vector2(0, 530), Vector2(0, 600), Vector2(0, 100)]
}

[sub_resource type="Animation" id="Animation_b6uv1"]
resource_name = "hide_credits"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Credits/BackSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.282), Color(0, 0, 0, 0.282), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Credits/BackgroundSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 0.42, 1),
"update": 0,
"values": [Vector2(180, 343), Vector2(180, 343), Vector2(180, -381)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits/ExitTextureButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 0.420448, 1),
"update": 0,
"values": [Vector2(119, 595), Vector2(119, 595), Vector2(119, -127)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits/ScrollContainer/CreditsLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Credits/ScrollContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer/Label:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_iab25"]
resource_name = "show_credits"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Credits/BackSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.282)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Credits/BackgroundSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(180, -381), Vector2(180, 343)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Credits/ExitTextureButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(119, -127), Vector2(119, 595)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Credits/ScrollContainer/CreditsLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Credits/ScrollContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer/Label:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7jvs"]
_data = {
&"RESET": SubResource("Animation_ewknp"),
&"SHOWN": SubResource("Animation_et3xt"),
&"coming_soon": SubResource("Animation_b26wi"),
&"hide_credits": SubResource("Animation_b6uv1"),
&"show_credits": SubResource("Animation_iab25")
}

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_duh1u")

[node name="Parallax2D" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="Parallax2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.943139, 0.987575, 0.905735, 1)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallax2D"]
motion_mirroring = Vector2(386.17, 487.17)

[node name="Textures" type="Node2D" parent="Parallax2D/ParallaxLayer"]

[node name="Sprite2DTopLeft" type="Sprite2D" parent="Parallax2D/ParallaxLayer/Textures"]
modulate = Color(1, 1, 1, 0.5)
texture_repeat = 2
texture = ExtResource("1_b226h")
centered = false

[node name="Sprite2DTopRight" type="Sprite2D" parent="Parallax2D/ParallaxLayer/Textures"]
modulate = Color(1, 1, 1, 0.5)
texture_repeat = 2
texture = ExtResource("1_b226h")
centered = false
offset = Vector2(386.17, 0)

[node name="Sprite2DBottomLeft" type="Sprite2D" parent="Parallax2D/ParallaxLayer/Textures"]
modulate = Color(1, 1, 1, 0.5)
texture_repeat = 2
texture = ExtResource("1_b226h")
centered = false
offset = Vector2(0, 487.17)

[node name="Sprite2DBottomRight" type="Sprite2D" parent="Parallax2D/ParallaxLayer/Textures"]
modulate = Color(1, 1, 1, 0.5)
texture_repeat = 2
texture = ExtResource("1_b226h")
centered = false
offset = Vector2(386.17, 487.17)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 37
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 37
theme_override_constants/margin_bottom = 110

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CreditsTextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture_normal = ExtResource("4_rsiac")
stretch_mode = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CreditsTextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_3bmuq")
theme_override_font_sizes/font_size = 19
text = "CREDITS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSplitContainer0" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
text = "WHO'S THAT POKÉMON?"
label_settings = ExtResource("3_alxvg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="UpSprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/TitleLabel"]
show_behind_parent = true
position = Vector2(150.5, 9)
scale = Vector2(1.7, 1.7)
texture = ExtResource("4_pgam6")

[node name="DownSprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/TitleLabel"]
show_behind_parent = true
position = Vector2(150, 95)
scale = Vector2(1.7, 1.7)
texture = ExtResource("5_itfcf")

[node name="VSplitContainer1" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1

[node name="Settings" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Polygon2D" type="Polygon2D" parent="MarginContainer/VBoxContainer/Settings"]
position = Vector2(-2, 6)
color = Color(1, 1, 1, 0.498039)
polygon = PackedVector2Array(-47, -20, 336, -20, 336, 70, -47, 70)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Settings"]
layout_mode = 2
offset_top = 4.0
offset_right = 297.0
offset_bottom = 63.0

[node name="HSplitContainer1" type="HSplitContainer" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("6_3bmuq")
theme_override_font_sizes/font_size = 20
text = "MUSIC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("5_b26wi")
theme_override_icons/unchecked = ExtResource("6_ewknp")
button_pressed = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer/MusicCheckButton"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
position = Vector2(33, 29.5)
scale = Vector2(1.04545, 1.2)
texture = ExtResource("6_ewknp")

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("6_3bmuq")
theme_override_font_sizes/font_size = 20
text = "SOUND
EFFECTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
theme_override_icons/checked = ExtResource("5_b26wi")
theme_override_icons/unchecked = ExtResource("6_ewknp")
button_pressed = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer/SFXCheckButton"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
position = Vector2(33, 29.5)
scale = Vector2(1.04545, 1.2)
texture = ExtResource("6_ewknp")

[node name="HSplitContainer3" type="HSplitContainer" parent="MarginContainer/VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSplitContainer2" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.76

[node name="PokémonTextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_rsiac")
texture_pressed = ExtResource("5_3bmuq")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PokémonTextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_3bmuq")
theme_override_font_sizes/font_size = 25
text = "NAMES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/PokémonTextureButton"]
modulate = Color(0.427493, 0.427493, 0.427493, 1)
show_behind_parent = true
position = Vector2(89.5, 38)
texture = ExtResource("6_nn7w8")

[node name="VSplitContainer3" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="FormTextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.658, 0.64, 1, 1)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_rsiac")
texture_pressed = ExtResource("5_3bmuq")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FormTextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_3bmuq")
theme_override_font_sizes/font_size = 25
text = "FORMS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/FormTextureButton"]
modulate = Color(0.427493, 0.427493, 0.427493, 1)
show_behind_parent = true
position = Vector2(89.5, 38)
texture = ExtResource("6_nn7w8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a7jvs")
}

[node name="Label" type="Label" parent="AnimationPlayer"]
visible = false
offset_top = 600.0
offset_right = 359.0
offset_bottom = 640.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14, 0.221, 0.09, 0.387)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_3bmuq")
theme_override_font_sizes/font_size = 28
text = "Coming soon..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_itfcf")
volume_db = 10.0
bus = &"SFX"

[node name="SoundTimer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true
autostart = true

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ChangeSceneAnimation" parent="." instance=ExtResource("13_itfcf")]

[node name="Credits" type="Node2D" parent="."]

[node name="BackSprite2D" type="Sprite2D" parent="Credits"]
modulate = Color(0, 0, 0, 0)
position = Vector2(179, 412)
scale = Vector2(2, 2)
texture = ExtResource("14_33jql")

[node name="BackgroundSprite2D" type="Sprite2D" parent="Credits"]
position = Vector2(180, -381)
scale = Vector2(2, 2)
texture = ExtResource("15_iab25")

[node name="ScrollContainer" type="ScrollContainer" parent="Credits"]
visible = false
offset_left = 24.0
offset_top = 49.0
offset_right = 336.0
offset_bottom = 603.0
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 3

[node name="CreditsLabel" type="Label" parent="Credits/ScrollContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.359, 0.359, 0.359, 0.492)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 26
text = "Project made by JavRod

All Pokémon sprites rights belong to The Pokémon Company, as well as opening sound effect and background music.

Spiky-eared Pichu sprite comes from Super Smash Bros assets.

Fonts obtained through fontmeme.com

Any other sound effect has been obtained through royalty-free platforms.

All sprites other than the ones stated above were made by JavRod, based off the original dessigns from The Pokémon Company.

This is a personal project and is not for commercial use. The assets (music, images, etc.) are the porperty of their respective owners.

Please do not sell, redistribute, or use it to generate revenue without the express permission of the original code author and the owners of the assets.

Parts of the code were made and/or inspired by Google Gemini. The final product has been revised and edited by JavRod."
horizontal_alignment = 1
autowrap_mode = 3

[node name="ExitTextureButton" type="TextureButton" parent="Credits"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 119.0
offset_top = -127.0
offset_right = 160.0
offset_bottom = -86.0
scale = Vector2(3, 3)
texture_normal = ExtResource("16_iab25")

[node name="ExitLabel" type="Label" parent="Credits/ExitTextureButton"]
layout_mode = 0
offset_left = 14.6667
offset_top = 13.0
offset_right = 54.6667
offset_bottom = 70.2292
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 41
text = "X"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsTextureButton" to="." method="_on_credits_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings/HBoxContainer/MusicCheckButton" to="." method="_on_music_check_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings/HBoxContainer/SFXCheckButton" to="." method="_on_sfx_check_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PokémonTextureButton" to="." method="_on_pokémon_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FormTextureButton" to="." method="_on_form_texture_button_pressed"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="pressed" from="Credits/ExitTextureButton" to="." method="_on_texture_button_pressed"]
